--- a/coptic/crum/index.html
+++ b/coptic/crum/index.html
@@ -12,8 +12,8 @@
 				<ul class="abbreviations">
 					<li><a href="https://archive.org/details/oeuvresdeschenou01shen" class="source"></a> <span class="abbr">A</span> (with <span class="abbr">Sh</span> prefixed) = E. Amélineau, <i>Œuvres de Schenoudi</i>, 1907 ff.</li>
 					<li class="non-source"><i class="dialect">A</i> = Achmîmic dialect; <i class="dialect">A<span>²</span></i> = Subachmîmic dialect.</li>
-					<li><span class="abbr">Absal</span> = <i>Kitâb al-Abṣâlmudîyah al-Muḳaddasah al-Sanawîyah (Theotokia)</i>, Alexandria, 1908.</li>
-					<li><span class="abbr">Abst</span> = <i>Kitâb al-Abṣâliyât wal-Ṭaruḥât</i>, Old Cairo, 1913.</li>
+					<li><a href="https://digitale-sammlungen.ulb.uni-bonn.de/content/titleinfo/3276169" class="source"></a> <span class="abbr">Absal</span> = <i>Kitâb al-Abṣâlmudîyah al-Muḳaddasah al-Sanawîyah (Theotokia)</i>, Alexandria, 1908.</li>
+					<li><a href="https://digitale-sammlungen.ulb.uni-bonn.de/content/titleinfo/3336324" class="source"></a> <span class="abbr">Abst</span> = <i>Kitâb al-Abṣâliyât wal-Ṭaruḥât</i>, Old Cairo, 1913.</li>
 					<li class="bible"><span class="abbr">Ac</span> = Acts of the Apostles.</li>
 					<li class="non-source"><span class="abbr">acc</span> = accusative.</li>
 					<li class="non-source"><span class="abbr">adj</span> = adjective.</li>
