--- a/coptic/crum/index.html
+++ b/coptic/crum/index.html
@@ -83,7 +83,7 @@
 							<li class="bible"><span class="abbr">Chr.</span> = Chronicles.</li>
 							<li class="non-source"><span class="abbr">cit</span> = cited, quoted in following place.</li>
 							<li><a href="https://archive.org/details/bub_gb_5HkRAAAAYAAJ" class="source"></a> <span class="abbr">Cl</span> = C. Schmidt, <i>Der I. Clemensbrief.</i> 1908 } acc. to chh.</li>
-							<li><span class="abbr">—</span> = F. Röach, <i>Bruchstücke des I. Clem.</i> 1910 } of Greek text.</li>
+							<li><a href="https://archive.org/details/bruchstckedese00clemuoft/bruchstckedese00clemuoft" class="source"></a> <span class="abbr">—</span> = F. Röach, <i>Bruchstücke des I. Clem.</i> 1910 } of Greek text.</li>
 							<li><span class="abbr">ClPr</span> = Woide's MSS. belonging to the Clarendon Press (Crum's copies &amp; photographs).</li>
 							<li><a href="https://archive.org/details/copticmanuscript00crumuoft" class="source"></a> <span class="abbr">CMSS</span> = Crum, <i>Coptic MSS. from Fayyûm</i>, 1893, acc. to pp.</li>
 							<li><a href="https://archive.org/details/copticostracafr00fundgoog" class="source"></a> <span class="abbr">CO</span> = Crum, <i>Coptic Ostraca</i>, 1902.</li>
@@ -434,6 +434,65 @@
 							<li class="bible"><span class="abbr">Tob</span> = Tobit.</li>
 							<li class="bible"><span class="abbr">Zech</span> = Zechariah.</li>
 							<li class="bible"><span class="abbr">Zeph</span> = Zephaniah.</li>
+						</ul>
+					</li>
+					<li id="etc">
+						<ul>
+							<li class="non-source"><i class="dialect">A</i> = Achmîmic dialect; <i class="dialect">A<span>²</span></i> = Subachmîmic dialect.</li>
+							<li class="non-source"><span class="abbr">acc</span> = accusative.</li>
+							<li class="non-source"><span class="abbr">adj</span> = adjective.</li>
+							<li class="non-source"><span class="abbr">Ar</span>, <span class="abbr">ar</span> = Arabic.</li>
+							<li class="non-source"><span class="abbr">art</span> = article.</li>
+							<li class="non-source"><i class="dialect">B</i> = Bohairic dialect.</li>
+							<li class="non-source"><span class="abbr">c</span> = constructed with (of verbs).</li>
+							<li class="non-source"><span class="abbr">caus</span> = causative verb.</li>
+							<li class="non-source"><span class="abbr">cit</span> = cited, quoted in following place.</li>
+							<li class="non-source"><span class="abbr">dem</span> = demotic.</li>
+							<li class="non-source"><span class="abbr">diff</span> = different reading, not useful for comparison.</li>
+							<li class="non-source"><span class="abbr">do</span> = ditto, same as last word cited in this dialect.</li>
+							<li class="non-source"><span class="abbr">esp</span> = especially.</li>
+							<li class="non-source"><span class="abbr">f</span> = feminine.</li>
+							<li class="non-source"><i class="dialect">F</i> = Fayyûmic &amp; related dialects; <i class="dialect">F<sup>b</sup></i> do. with Bohairic tendency.</li>
+							<li class="non-source"><span class="abbr">gen</span> = genitive.</li>
+							<li class="non-source"><span class="abbr">Gk</span> = Greek.</li>
+							<li class="non-source"><span class="abbr"><i>inf</i></span> = <i>infra</i>.</li>
+							<li class="non-source"><span class="abbr">interj</span> = interjection.</li>
+							<li class="non-source"><span class="abbr">interrog</span> = interrogative.</li>
+							<li class="non-source"><span class="abbr">intr</span> = intransitive (<i>i.e.</i> verb without immediate object, or one constructed with prep. <span class="coptic">ⲉ-</span>).</li>
+							<li class="non-source"><span class="abbr"><i>l</i></span> = <i>legendum</i>.</li>
+							<li class="non-source"><span class="abbr">lit</span> = literally.</li>
+							<li class="non-source"><span class="abbr">m</span> = masculine.</li>
+							<li class="non-source"><span class="coptic">ⲛ︤ⲉ︥</span> = <span class="coptic">ⲛⲟⲩⲧⲉ</span>.</li>
+							<li class="non-source"><span class="abbr">nn</span> = noun.</li>
+							<li class="non-source"><i class="dialect">O</i> = Old Coptic idiom (AZ 21 93 ff., 38 76 ff.)</li>
+							<li class="non-source"><span class="abbr">obj</span> = object.</li>
+							<li class="non-source"><span class="abbr">om</span> = omits, omitted.</li>
+							<li class="non-source"><span class="abbr">opp</span> = as opposed to, contrasted with.</li>
+							<li class="non-source"><span class="abbr">paral</span> = parallel word or phrase.</li>
+							<li class="non-source"><span class="abbr"><i>pass</i></span> = <i>passim</i>.</li>
+							<li class="non-source"><span class="abbr">p c</span> = conjunctive participle.</li>
+							<li class="non-source"><span class="abbr">pl</span> = plural.</li>
+							<li class="non-source"><span class="abbr">poss</span> = possessive pronoun.</li>
+							<li class="non-source"><span class="abbr">pref</span> = prefix.</li>
+							<li class="non-source"><span class="abbr">prep</span> = preposition.</li>
+							<li class="non-source"><span class="abbr">pres</span> = present tense, thus: 1 pres, 2 pres.</li>
+							<li class="non-source"><span class="abbr">prob</span> = probably.</li>
+							<li class="non-source"><span class="abbr">pron</span> = pronoun.</li>
+							<li class="non-source"><span class="abbr">qual</span> = qualitative of verb; also indicated by <span class="abbr">†</span>.</li>
+							<li class="non-source"><span class="abbr">refl</span> = reflexive use.</li>
+							<li class="non-source"><span class="abbr">rel</span> = relative.</li>
+							<li class="non-source"><i class="dialect">S</i> = Saʿîdic dialect; <i class="dialect">S<sup>a</sup></i> Saʿîdic with Achmîmic tendency (mostly Theban), <i class="dialect">S<sup>f</sup></i> with Fayyûmic tendency.</li>
+							<li class="non-source"><span class="abbr"><i>s f</i></span> = <i>sub fine</i>.</li>
+							<li class="non-source"><span class="abbr">sg</span> = singular.</li>
+							<li class="non-source"><span class="abbr">sim</span> = similar in use or in meaning to the last quoted instance.</li>
+							<li class="non-source"><span class="abbr">suff</span> = suffix.</li>
+							<li class="non-source"><span class="abbr">tr</span> = transitive.</li>
+							<li class="non-source"><span class="abbr"><i>V</i></span> = <i>vide</i>.</li>
+							<li class="non-source"><span class="abbr">var</span> = variant, in same dialect.</li>
+							<li class="non-source"><span class="abbr">vb</span> = verb.</li>
+							<li class="non-source"><span class="abbr">†</span> = (after verbal forms) qualitative.</li>
+							<li class="non-source"><span class="abbr">( )</span> = Coptic letter inserted by editor, except in headings, where they indicate variants or hypothetical forms.</li>
+							<li class="non-source"><span class="abbr">?</span> = perhaps, possibly.</li>
 						</ul>
 					</li>
 				</ul>
