--- a/coptic/crum/index.html
+++ b/coptic/crum/index.html
@@ -6,6 +6,25 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
+		<div>
+			<h2>Preface</h2>
+			<p>Preparations for systematic work with a view to a Coptic dictionary were begun by me some thirty years ago, but intervening undertakings delayed effective progress for some time. Meanwhile it was ascertained that the Clarendon Press would be not unwilling to consider, when the time came, a project of publication. But early in 1914 a definite proposal to publish, at their expense and with provision of funds for collaboration, photography &amp;c., came from the Berlin Academy. This generous offer I owed to Professor Erman, who saw the need of a Coptic dictionary on a scale worthy of that of the hieroglyphic <i>Wörterbuch</i> and who issued a statement on the subject.<sup class="footnote">1</sup> A scheme was drawn up and work begun<sup class="footnote">2</sup> and if the outbreak of war had not put an end to all hopes of carrying through such projects, the book would have been completed long ere now. Yet it was found possible to retain the help of German collaborators, as well as of those in the allied countries, and a few years after the end of the war a collection of material had been amassed large enough to justify a renewal of negotiations with the Clarendon Press. These resulted in the arrangement whereby the dictionary is now published.</p>
+			<p>In 1921 the late Professor Spiegelberg produced his <i>Handwörterbuch</i>, which he modestly described as a revision of Peyron's <i>Lexicon</i> (1835), but which in reality is far more than that. Its most conspicuous novelty was the addition, in all cases where in the author's opinion justifiable, of the hieroglyphic or demotic etymology of the Coptic form. The absence of this important element from the present work some students may regret; it was only after much hesitation that I decided to omit it. I cannot claim an independent judgement as to the appositeness of a demotic etymology, while to reproduce these in hieroglyphic type—for a mere transcription satisfies no one—would greatly have increased costs and yet have added nothing of adequate importance to what Spiegelberg has already given us.<sup class="footnote">3</sup></p>
+			<p>What is here offered represents an entirely new and independent working over of the total available material. Our word-collecting has all been done directly, from the texts; all those in print have of course been utilized—often after collation with the originals; so too all unpublished manuscripts, ostraca and inscriptions, to which access could be obtained. The quantity of material used amounts, at a rough estimate, to some 240,000 slips.<sup class="footnote">4</sup> It is hoped that these resources give a sufficient basis for a comprehensive view of the language, in all its dialects and in all aspects of its literature: biblical, patristic and mundane. The total of recorded independent words—ignoring the countless derived forms—is 3,308, whereof some 390 are still of unknown meaning. These are mostly <span class="greek">ἅπαξ λεγόμενα</span> and some are no doubt misread.</p>
+			<p>If I name here only the principal sources which have become available within recent decades, some notion will be possible of the extent to which materials have increased.</p>
+			<p>To begin with the largest and, in some ways, the most important of extant collections, there are the fifty-six volumes from the Fayyûm, bought in 1911 by Mr. Pierpont Morgan, a body of texts unparalleled for completeness, if not for variety.<sup class="footnote">1</sup> Next in size comes the Paris collection: some twenty-five volumes of fragments, the greater part of which has not yet attained to print. Then there is a considerable number of leaves in the Borgian collection, which Zoega's Catalogue merely mentions, the Curzon manuscripts (now the property of the British Museum), an interesting series in the Berlin Library and an important and varied collection acquired for the University of Michigan.</p>
+			<p>So far I have named mostly Saʿîdic MSS., emanating in great part from the library of Shenoute's monastery. Turning now to Bohairic, there is the imposing series, brought long since from Nitria to the Vatican, considerable parts of which are not yet in print—conspicuously the volume of Chrysostom, with its thirty-seven complete homilies—and there is besides a large number of important texts, chiefly liturgical, scattered among all the libraries: service books, hymn books and especially lectionaries, whence interesting variants of the received biblical texts may be gathered. The lectionaries were exploited by La Croze and, thanks to Dr. Burmester, we shall before long have certain of them available. Last, but by no means least, among our Bohairic resources come the vocabularies. The fourteenth-century <i>Scala</i> of Abû ʾl-Barakât (transcribed and interpreted by Kircher, but cited here from his MS. and acollation of eleven others) of course surpasses the rest in importance; yet there is plenty worth recording in the lesser glossaries also: many an Arabic translation or Greek equivalent, to throw light upon rare or doubtful words. It is true that these glossaries are the product of a late age, owing their existence to the disuse that had by then fallen upon the ancient language; but I have thought it better, here as elsewhere, to include too much, rather than too little, and to record everything from these medieval sources that could be claimed as ultimately Coptic.</p>
+			<p>As regards the lesser dialects, reference must first be made to the great increase in material resulting from the discovery and gradual publication of the Manichaean papyri, acquired by Mr. Chester Beatty and the Berlin Museum. These we have been able to use, thanks to the permission of their owners and to copies of the unpublished portions kindly sent by Dr. Polotsky and Mr. Allberry. But this advantage has been ours only since reaching the letter ⲡ<sup class="footnote">2</sup> and so many would have been the insertions in the <i>Additions</i>, had we attempted to record all new words and forms under the previous letters, that it seemed preferable to ignore them almost entirely and to refer students to the indexes of the eventual publications. The at present confused idioms included under the term Middle Egyptian, or, as in this book, Fayyûmic, may later on require special vocabularies, but most of its strange phenomena, so far as yet observed, have found a place here.<sup class="footnote">3</sup></p>
+			<p>Finally there is a large body of non-literary texts, which to the earlier lexicographer were entirely unknown. In Peyron's day not a single Coptic 'document' was available; nothing of the kind was heard of until the first batch of the Jêmé papyri began to attract the attention of C. W. Goodwin, E. Revillout and M. Kabis, in the 'sixties and 'seventies of last century. To-day conditions are far different; a great deal of material of this class is now in print: ecclesiastical and monastic documents, legal deeds, correspondence—official, commercial and purely private—tax receipts, accounts, lists; besides epigraphic texts: epitaphs, dedicatory inscriptions and the like. Further, magical texts of various kinds: prayers, incantations, curses, charms, whence many a strange, forgotten word may be unearthed. In some of these groups there is still plenty of material awaiting publication; nevertheless I think it may be claimed that but little—so far as it has been acquired for public or private collections—has remained unutilized.</p>
+			<p>Something must be said as to the method followed in recording and illustrating words.</p>
+			<p>From considerations of space and cost everything is abbreviated down to the limits, it is hoped, of intelligibility. For the context of words illustrated an English summary has often appeared sufficient. The punctuation and spacing are meant to be taken seriously, the use of the semicolon in particular being intended to separate groups in meaning or usage. All references are to the most recent editions of published texts, even where (as in Amélineau's <i>Schenoudi</i>) the later does not positively improve upon the older print.<sup class="footnote">1</sup> Bible verses are given <i>in the numeration of the published Coptic editions</i>, without regard either to that of the LXX or of the English version. Manuscripts are cited, where possible, by their Coptic pagination; but this rule has been occasionally transgressed, notably in the Vatican series, where the modern foliation is followed. Quotations are printed as they appear in the MSS., their orthography uncorrected, except where ambiguity demanded emendation. Irregular variants in word-form are enumerated at the outset of each paragraph; at first those most rarely occurring were occasionally omitted, later on all were recorded. In the following subdivisions the Saʿîdic form often does duty for the rest. The gender of a noun is not stated except where positive evidence (by article, pronoun or the like) is to be had from the text.</p>
+			<p>As the long work progressed its quality has, I hope, improved; but if it were to be done again, not a few alterations in method would be desirable. Where a word is rare, it would be made clear that the instances given are exhaustive. <sup class="footnote">2</sup> There would be some indication of the <i>relative</i> amounts of material drawn upon for each dialect; our paragraphs are apt to be misleading as to that: <i class="dialect">B</i> is for the most part less fully represented than <i class="dialect">S</i>, owing to the far greater variety of sources available in the latter. Less ambiguous and contradictory indications of dialect ought to have been achieved; <i class="dialect">S<sup>f</sup></i> has often been attached to a form found in a text otherwise purely Saʿîdic, while <i class="dialect">S<sup>a</sup></i> is used to include, besides forms especially Theban, those of more northern and less certain origin. Again, <i class="dialect">A<span>²</span></i> has not been always confined to MSS. in that dialect for which the name 'Siutic' has been proposed.<sup class="footnote">3</sup> <i class="dialect">F</i> of course embraces several varieties of idiom: that of the Fayyûm and those adjoining it in the river valley, wherein divergence from Saʿîdic is often slight; indeed I fear that in not a few cases (conspicuously where hybrid texts such as Mor 30 are drawn upon) examples from one and the same MS. may be found assigned to <i class="dialect">S</i>, <i class="dialect">S<sup>f</sup></i> and <i class="dialect">F</i>.<sup class="footnote">4</sup> The addition of the dialectal equivalent, in literary texts as well as biblical, is perhaps less valuable than at first appeared; divergence in detail between the bible versions—far more frequent than has usually been admitted—and still wider differences between the versions, even within a single dialect, of other texts, tend to lessen the significance of apparent equivalents. The decision to maintain the terms 'transitive' and 'intransitive' would perhaps not commend itself; they are used to distinguish between the direct relation of verb and object ('accusative', ⲛ-) and the indirect (ⲉ- and other prepositions), besides cases of the objectless verb.</p>
+			<p>Illustration must obviously be limited by our collections. A word or form may thus appear to be absent in one or other of the dialects which future additions to material will supply; another may recur later on, whereof at present only a single instance has been recorded.</p>
+			<p></p>
+			<p></p>
+			<p></p>
+			<p></p>
+		</div>
 		<p>
 			<h2>List of Abbreviations</h2>
 			<div id="container">
@@ -813,7 +832,56 @@
 						</li>
 						<li>With following adverb.</li>
 						<li>— ⲉⲃⲟⲗ <i class="dialect">B</i>, <i>reach out</i>:
-						
+							<ul>
+								<li>Dif 2 24 his teaching ⲫ. ⲉⲃ. to world's ends;</li>
+								<li><i>v</i> also above ⲡ. <i>ripen</i>.</li>
+							</ul>
+						</li>
+						<li><b>II</b> as auxil <i class="dialect">S</i><i class="dialect">B</i>(rare), <i>attain to</i>, <i>succeed</i> in doing, <i>just</i> do, do <i>for once</i>.
+							<ul>
+								<li>c ⲛ-:
+									<ul>
+										<li>Lu 13 25 <i class="dialect">S</i> ⲉϥϣⲁⲛⲡϩ ⲛⲧⲱⲟⲩⲛ (<i class="dialect">B</i> ⲉ-) ἀφ' οὗ ἄν <i>when once hath</i>;</li>
+										<li>Gal 6 1 <i class="dialect">S</i> ⲉⲣϣⲁⲛ…ⲡϩ ⲛϩⲉ (<i class="dialect">B</i> om) ἐὰν καὶ προληφθῇ,</li>
+										<li>R 2 2 45 <i class="dialect">S</i> ere flame ⲡϩ (<i>sic</i> <i>l</i>) ⲛϫⲓⲥⲉ πρὶν ἀρθῆναι;</li>
+										<li>BHom 42 <i class="dialect">S</i> ⲉⲣϣⲁⲛⲟⲩⲯⲩⲭⲏ ⲡϩ ⲛϫⲓ ϯⲡⲉ ἅπαξ γευσαμένη;</li>
+										<li><i>ib</i> 22 <i class="dialect">S</i> ⲡⲉⲛⲧⲁϥⲡϩ ⲛⲥⲗⲁⲁⲧⲉ ὁ φθάσας ὀλισθῆσαι,</li>
+										<li>Z 232 <i class="dialect">S</i> ⲁⲓⲡϩ ⲛⲁⲁⲥ <i>have just managed to</i> or <i>succeeded in doing it</i>,</li>
+										<li>ShZ 593 <i class="dialect">S</i> ⲉⲩϣⲁⲛⲡϩ ⲛⲱⲣϫ ⲙⲡⲣⲟ <i>when once door be fastened</i>,</li>
+										<li>Mor 46 8 <i class="dialect">S</i> ⲉⲓϣⲁⲛⲡϩ ⲉⲛϫⲟⲟⲩⲕ <i>when once I have sent thee</i> to κόμης then can I no longer save thee,</li>
+										<li>TEuch 1 665 ⲁϥϣⲁⲛⲫ. ⲛϫⲱ ⲁⲙⲏⲛ (var HCons 378 ⲫ. ⲉⲫⲙⲱⲓⲧ ⲛⲧⲉ ⲁ.);</li>
+									</ul>
+								</li>
+								<li>c ⲉ-:
+									<ul>
+										<li>Mt 10 23 <i class="dialect">B</i> ⲫ. ⲉⲙⲉϣⲧ <i>already visited</i> (<i class="dialect">S</i> Gk diff);</li>
+										<li>Mor 17 109 <i class="dialect">S</i> ϯⲡ.† ⲉⲧⲟⲩⲛⲉⲥ <i>going to raise</i> fallen temple (var Ming 309 ϯⲛⲁⲧ.) μέλλειν,</li>
+										<li><i>ib</i> 83 <i class="dialect">S</i> ⲧⲛⲡ.† ⲉⲡⲁⲑⲉ μ.;</li>
+										<li>PS 220 <i class="dialect">S</i> ⲡⲥⲟⲟⲩⲛ…ϯⲡ.† ⲉϫⲟⲟϥ <i>am going to tell you</i>,</li>
+										<li><i>ib</i> 315 <i class="dialect">S</i> delay not (saying) ϫⲉⲧⲉⲧⲛⲡ.<sup>†</sup> ⲉϫⲓ when we come again,</li>
+										<li>TstAb 238 <i class="dialect">B</i> eyes will not ⲫ. ⲉⲛⲁⲩ ⲉⲣⲱⲟⲩ.</li>
+									</ul>
+								</li>
+							</ul>
+						</li>
+						<li><b>III</b> tr <i class="dialect">S<sup>f</sup></i><i class="dialect">B</i>:
+							<ul>
+								<li>BSM 48 <i class="dialect">B</i> will not cease ϣⲁⲧⲁⲫⲉϩⲑⲏⲛⲟⲩ ⲉⲡⲭ︤ⲥ︥ = BMis 398 <i class="dialect">S</i> ⲡⲣⲟⲥⲉⲛⲉⲅⲕⲏ ⲙⲙⲱⲧⲛ,</li>
+								<li><i>ib</i> 56 <i class="dialect">B</i> ⲙⲁⲣⲉⲛⲫ. ⲙⲙⲟⲛ <i>draw nigh</i> to archangel = BMis 412 <i class="dialect">S</i> ϯ ⲡⲉⲛⲟⲩⲟⲓ;</li>
+								<li><i>stretch</i>:
+									<ul>
+										<li>BM 512 <i class="dialect">S<sup>f</sup></i> ⲛϥⲡⲉϩ ⲧⲉϥϭⲓϫ ⲉⲥⲙⲟⲩ.</li>
+									</ul>
+								</li>
+							</ul>
+						</li>
+						<li>— <i class="dialect">B</i> nn m, <i>maturity</i>:
+							<li>K 102 <span class="arabic">بلوغ</span>, <i>ib</i> ⲩⲗⲓⲕⲓⲁ <span class="arabic">ﺑ.</span>.</li>
+							<li>ⲙⲁ ⲛⲫ. <i class="dialect">B</i>, <i>goal</i>:
+								<ul>
+									<li>Ps 18 7 (<i class="dialect">S</i> ⲙⲁ ⲛⲃⲱⲕ ⲉϩⲟⲩⲛ) κατάντημα.</li>
+								</ul>
+							</li>
 						</li>
 					</ul>
 				</li>
