--- a/coptic/crum/index.html
+++ b/coptic/crum/index.html
@@ -52,15 +52,61 @@
 			<h2>Additions and Corrections</h2>
 			<p><i>a</i>, <i>b</i> refer to columns 1 &amp; 2.</p>
 			<ul id="additions_and_corrections">
-				<li><span class="page">1 <i>a</i></span> 11 up, add <span class="coptic">ⲁⲁ-</span> <i class="dialect">S</i>: Mor 50 62, HT <i>W</i> 79 <span class="coptic">ⲛⲁⲁⲡϣⲁⲩ</span>.</li>
-				<li><span class="page">1 <i>b</i></span> 21 up, add <span class="coptic">ⲁⲓⲉⲩ<sup>†</sup></span> <i class="dialect">A</i> oftenest.</li>
-				<li><span class="page">—</span> 13 up, read <span class="greek">μεγαλύνεσθαι</span>.</li>
-				<li><span class="page">—</span> 7 up, read <span class="greek">πληθύνεσθαι</span>.</li>
-				<li><span class="page">2 <i>a</i></span> 13, add Miss 4 205 <i class="dialect">B</i> <span class="coptic">ⲧⲁⲓⲛⲓϣϯ ⲉⲧⲟⲓ</span> (delete <span class="coptic">ⲛⲧⲟⲓ</span>) <span class="coptic">ⲛⲧⲁⲓⲙⲁⲓⲏ</span>.</li>
-				<li><span class="page">—</span> 18 up.<i>Cf</i> ManiP 201 29 <span class="coptic">ⲁⲃⲏ</span>.</li>
-				<li><span class="page">—</span> 15 up, add ostr Chicago 855 <span class="coptic">ⲟⲩⲁⲃⲉ</span> among metal utensils.</li>
-				<li><span class="page">2 <i>b</i></span> after 21, add <span class="coptic">ⲁⲃⲉⲛ</span> <i>v</i> <span class="coptic">ⲟⲃⲛ</span>.</li>
-				<li><span class="page">2 <i>a</i></span> <i class="dialect"></i> <span class="coptic"></span>.</li>
+				<li><span class="page">1 <i>a</i></span>11 up, add <span class="coptic">ⲁⲁ-</span> <i class="dialect">S</i>: Mor 50 62, HT <i>W</i> 79 <span class="coptic">ⲛⲁⲁⲡϣⲁⲩ</span>.</li>
+				<li><span class="page">1 <i>b</i></span>21 up, add <span class="coptic">ⲁⲓⲉⲩ<sup>†</sup></span> <i class="dialect">A</i> oftenest.</li>
+				<li><span class="page">—</span>13 up, read <span class="greek">μεγαλύνεσθαι</span>.</li>
+				<li><span class="page">—</span>7 up, read <span class="greek">πληθύνεσθαι</span>.</li>
+				<li><span class="page">2 <i>a</i></span>13, add Miss 4 205 <i class="dialect">B</i> <span class="coptic">ⲧⲁⲓⲛⲓϣϯ ⲉⲧⲟⲓ</span> (delete <span class="coptic">ⲛⲧⲟⲓ</span>) <span class="coptic">ⲛⲧⲁⲓⲙⲁⲓⲏ</span>.</li>
+				<li><span class="page">—</span>18 up.<i>Cf</i> ManiP 201 29 <span class="coptic">ⲁⲃⲏ</span>.</li>
+				<li><span class="page">—</span>15 up, add ostr Chicago 855 <span class="coptic">ⲟⲩⲁⲃⲉ</span> among metal utensils.</li>
+				<li><span class="page">2 <i>b</i></span>after 21, add <span class="coptic">ⲁⲃⲉⲛ</span> <i>v</i> <span class="coptic">ⲟⲃⲛ</span>.</li>
+				<li><span class="page">3 <i>a</i></span>12, MG 25 370 thing seen <i>in</i> glass (Polotsky).</li>
+				<li><span class="page">—</span>18 up, for <i class="dialect">B</i> read <i class="dialect">B</i><i class="dialect">F</i>.</li>
+				<li><span class="page">—</span>15 up, for <i class="dialect">S</i> read <i class="dialect">S</i><i class="dialect">F</i>.</li>
+				<li><span class="page">—</span>11 &amp; 7 up, read <span class="greek">ἐγκαινίζειν</span>.</li>
+				<li><span class="page">3 <i>b</i></span>7, add BMOr 6201 B 66 <span class="coptic">ⲁⲕϭⲱⲡ ⲧⲁ. ⲛⲛⲓⲧⲁⲗⲁⲓⲡⲱⲣⲟⲥ</span>, <i>ib</i> <span class="coptic">]ⲗⲁⲕⲟⲟⲧⲉ ⲛⲏⲣⲡ ϩⲓⲧⲉⲩⲁ.</span>, Turin ostr (Farina 651) <span class="coptic">ⲧⲁ. ⲙⲡⲡⲁⲣϩⲟⲇⲟⲥ</span>, <i>ib</i> (426) <span class="coptic">ⲧⲃⲃⲟ ⲧⲁ. ⲉⲃⲟⲗ</span>; pl Bodl(P) d 203 <i class="dialect">S</i> ye wrote <span class="coptic">ⲉⲧⲃⲉⲛⲁⲕⲟⲟⲩⲉ</span>.</li>
+				<li><span class="page">5 <i>b</i></span>26, add Griff Stu 163 <i class="dialect">F</i> <span class="coptic">ⲑⲁⲗⲉⲕ ⲃ̅ ⲙⲡⲡⲟⲩⲛ</span>.</li>
+				<li><span class="page">6 <i>a</i></span>20 up, add ShViK 9223 67 = C 73 161 <span class="coptic">ⲟⲗⲙⲉϥ ⲉϩⲟⲩⲛ ⲉⲡⲉϥⲁⲗⲟⲙ</span>.</li>
+				<li><span class="page">6 <i>b</i></span>12, Gk of Nu 24 <span class="greek">ἐκμυελίζειν</span>, of Ps 65 <span class="greek">μυελοῦσθαι</span>.</li>
+				<li><span class="page">—</span>17, for <i>ib</i> read MG 17.</li>
+				<li><span class="page">7 <i>a</i></span>13, <span class="greek">πανούκλας</span> = ? <i>groin</i> (<i>cf</i> <span class="greek">βουβών</span>), so <i>groin of direction</i>, whereon archer rests bow in <i>aiming</i> (Chaîne).</li>
+				<li><span class="page">—</span>28, add Ora 4 23 <span class="coptic">ⲉⲃⲣⲓ ⲁⲁⲙ</span>.</li>
+				<li><span class="page">—</span><i>ult</i>, add ManiP 18 <i class="dialect">A<span>²</span></i> <span class="coptic">ⲛⲓⲁⲙⲏ</span>.</li>
+				<li><span class="page">7 <i>b</i></span>16, add <span class="coptic">ⲁⲙⲉⲓ</span> <i class="dialect">A</i> TillOster 24.</li>
+				<li><span class="page">—</span>after 17 up, add <span class="coptic">ⲁⲙⲟⲕ</span>, <span class="coptic">-ⲅ</span> <i class="dialect">S</i>, liquid measure: Ora 4 24.</li>
+				<li><span class="page">8 <i>a</i></span>7 up, after He 12 2 add <span class="greek">ὑπομένειν</span>.</li>
+				<li><span class="page">8 <i>b</i></span>after 2, add — <span class="coptic">ⲉⲃⲟⲗ</span>, <i>endure</i>: Orat Manas 5 <span class="coptic">ⲁϥⲁ. ⲉⲃ. ⲁⲛ</span> <span class="greek">ἀνυπόστατος</span>.</li>
+				<li><span class="page">—</span>18 up, pl <i class="dialect">S</i> add <span class="coptic">ⲁⲙⲣⲏⲩⲉ</span> Landesbibl Munich Kopt 21 (Reich's copy).</li>
+				<li><span class="page">9 <i>a</i></span>13, read <span class="arabic">قار</span>.</li>
+				<li><span class="page">9 <i>a</i></span>after 22 up, add <span class="coptic">ⲁⲙϣⲓ</span> <i class="dialect">B</i> nn f, <i>rope</i>: P 54 171 <span class="coptic">ϯⲁ.</span> <span class="arabic">فتيلة</span>.</li>
+				<li><span class="page">—</span>8 up, read <span class="greek">δικαιοῦσθαι</span>.</li>
+				<li><span class="page">9 <i>b</i></span>29, read <span class="greek">γίνεσθαι</span>.</li>
+				<li><span class="page">10 <i>b</i></span>after 6, add <span class="coptic">ϭⲓⲛⲁⲧⲁⲙⲁϩⲧⲉ</span> <i class="dialect">S</i>: Mor 53 60.</li>
+				<li><span class="page">11 <i>a</i></span>5, <span class="coptic">ⲁⲛⲁⲓ</span> might be differently treated, AZ 47 141 ff. <i>V</i> <span class="coptic">ⲁⲛⲓⲧ<sup>†</sup></span> below.</li>
+				<li><span class="page">12 <i>a</i></span>after 15 up, add <span class="coptic">ⲁⲛⲓⲧ</span> <i class="dialect">S</i><i class="dialect">A<span>²</span></i> qual of <span class="coptic">ⲁⲛⲁⲓ</span>: CO 282 <i class="dialect">S</i> <span class="coptic">ⲕ]ⲁⲛ ⲉⲛⲁⲛⲓⲧ ⲕⲁⲛ ⲉⲛϩ[ⲟⲟⲩ</span> ?, <span class="coptic">ⲁⲛⲓⲧ</span> <i class="dialect">A<span>²</span></i> Mani <i>pass</i>.</li>
+				<li><span class="page">—</span>after 5 up, add <span class="coptic">ⲁⲛⲧⲉⲗⲉⲥ</span> <i class="dialect">B</i> nn f, <i>assembly</i>, <i>festival</i>: Va 57 70 <span class="greek">πανήγυρις</span>; MG 25 376 begged to be taken <span class="coptic">ⲉϯⲁ.</span> to see what befell there = BMOr 5652 95 <span class="arabic">المجمع</span> = ROC 8 289 <span class="aramaic">ܚܓܠ ܘܒܢܢܩܠ ܒܩܒܝܥܠ?</span>. Coptic?</li>
+				<li><span class="page">12 <i>b</i></span>9 up, add Ora 4 25 <span class="coptic">ⲕⲗⲁⲇⲟⲥ ⲛⲁⲛⲕϣ ⲙⲡⲣⲏ</span>.</li>
+				<li><span class="page">14 <i>a</i></span>10, <i>v</i> <span class="coptic">ⲥⲟⲡ</span>, a measure.</li>
+				<li><span class="page">—</span>28, read <span class="coptic">ϣⲁⲗϫ</span>.</li>
+				<li><span class="page">—</span>after 30, add <span class="coptic">ⲁⲡⲁⲓ</span> <i class="dialect">B</i> nn as pl: Is 41 7. <i>V</i> <span class="coptic">ⲗⲁⲧⲃⲥ</span>.</li>
+				<li><span class="page">—</span>31, for 19 read 21.</li>
+				<li><span class="page">—</span>after 18 up, add <span class="coptic">ⲁⲡⲟⲩ</span>, <span class="coptic">ⲁⲡⲟⲩϩ</span> <i class="dialect">S</i> nn m, title or epithet heading oil accounts: BMOr 6201 B 201 <span class="coptic">ⲡⲁⲡⲟⲩϩ ⲉⲃⲣⲟⲉⲓⲥ ⲉⲡϣⲟⲛⲧⲉ</span>, <i>ib</i> 197 <span class="coptic">ⲡⲁⲡⲟⲩ ⲥⲛⲁⲩ ⲉⲩⲕⲏ ⲛ[</span>, <i>ib</i> 239 <span class="coptic">ⲡⲁⲡⲟⲩ ⲛⲙⲁⲛϩⲉⲣⲙⲏ</span>.</li>
+				<li><span class="page">14 <i>b</i></span>11, for 458 read 58.</li>
+				<li><span class="page">—</span>after 18, add <span class="coptic">ⲁⲡⲉⲓⲧ</span> <i class="dialect">S</i>, a metal object: BP 69109.</li>
+				<li><span class="page">—</span>19, add ManiP 142 <span class="coptic">ⲉⲡⲁⲧ</span>.</li>
+				<li><span class="page">—</span>16 up, read <span class="coptic">ⲕⲁ ⲟⲉⲓⲕ</span>.</li>
+				<li><span class="page">15 <i>a</i></span>12, add prob Ep 543, TurM 13.</li>
+				<li><span class="page">16 <i>a</i></span>20 up, translates <span class="greek">τόσῳ</span> <i>by so much</i> (Griffith).</li>
+				<li><span class="page">16 <i>b</i></span>19 up, for <span class="coptic">ⲑⲣϣⲟ (ⲧϩ.)</span>, read <span class="coptic">ⲧⲁⲣϣⲟ</span>.</li>
+				<li><span class="page">18 <i>a</i></span>13. <i>Cf</i> Kropp 2 240, A Delatte <i>Textes grecs</i> 1927, 553.</li>
+				<li><span class="page">18 <i>b</i></span>16 up, for do read <span class="greek">ἄβατος</span>.</li>
+				<li><span class="page">19 <i>a</i></span>7. <i>Cf</i> Ryl 349 7 <span class="coptic">ⲛⲁⲧⲡⲉⲩϩⲟⲕϩⲕ</span>.</li>
+				<li><span class="page">—</span>28, read <span class="greek">πολύς</span>.</li>
+				<li><span class="page">19 <i>b</i></span>3, for <i class="dialect">B</i> read <i class="dialect">B</i><i class="dialect">F</i>.</li>
+				<li><span class="page">—</span>7, after <i class="dialect">A<span>²</span></i> add <i class="dialect">F</i> (Polotsky).</li>
+				<li><span class="page">—</span>19 up, <span class="coptic">ⲱ</span> <i class="dialect">S</i> often AZ 23 104 ff.</li>
+				<li><span class="page">—</span>24 up. <i>Cf</i> <span class="eg-tr">n-ꞽw</span> (<span class="coptic">ⲛⲏⲩ</span>) (Griffith).</li>
+				<li><span class="page">2 <i>a</i></span><i class="dialect"></i> <span class="coptic"></span>.</li>
 			</ul>
 		</div>
 		<p>
