les mysteres des lettres grecques

--- a/coptic/wip/les mystères des lettres grecques.html
+++ b/coptic/wip/les mystères des lettres grecques.html
@@ -1,3 +1,5 @@
+<html>
+<body>
 <h1>Les Mystères des Lettres Grecques</h1>
 <div id="source_coptic">
 	<h2>Text</h2>
@@ -21,3 +23,5 @@
 	<p></p>
 	<p></p>
 </div>
+</body>
+</html>
